welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.orange)
^SnakeBuggle:4: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.lightGray)
^SnakeBuggle:5: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.green)
^SnakeBuggle:6: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:13: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:14: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:17: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.green)
^SnakeBuggle:18: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.green)
^SnakeBuggle:20: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.lightGray)
^SnakeBuggle:21: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.lightGray)
^SnakeBuggle:23: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.orange)
^SnakeBuggle:24: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.orange)
^SnakeBuggle:33: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:34: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:35: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.orange)
^SnakeBuggle:36: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.orange)
^SnakeBuggle:37: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.orange)
^SnakeBuggle:38: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.orange)
^SnakeBuggle:39: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:40: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:42: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.orange)
^SnakeBuggle:43: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.orange)
^SnakeBuggle:46: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:47: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:49: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.orange)
^SnakeBuggle:50: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.orange)
^SnakeBuggle:54: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:55: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:97: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.white)
^SnakeBuggle:98: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.white)
^SnakeBuggle:136: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^SnakeBuggle:137: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.magenta)
^