welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
setBrosseCouleur(Color.orange)
setBrosseCouleur(Color.lightGray)
setBrosseCouleur(Color.green)
setBrosseCouleur(Color.magenta)
baisseBrosse()
avance()
recule()
droite()
droite()
droite()
setBrosseCouleur(Color.magenta)
setBrosseCouleur(Color.magenta)
baisseBrosse()
avance()
setBrosseCouleur(Color.green)
setBrosseCouleur(Color.green)
avance()
setBrosseCouleur(Color.lightGray)
setBrosseCouleur(Color.lightGray)
avance()
setBrosseCouleur(Color.orange)
setBrosseCouleur(Color.orange)
avance()
recule()
recule()
recule()
droite()
droite()
gauche()
avance()
setBrosseCouleur(Color.magenta)
setBrosseCouleur(Color.magenta)
setBrosseCouleur(Color.orange)
setBrosseCouleur(Color.orange)
setBrosseCouleur(Color.orange)
setBrosseCouleur(Color.orange)
setBrosseCouleur(Color.magenta)
setBrosseCouleur(Color.magenta)
avance()
setBrosseCouleur(Color.orange)
setBrosseCouleur(Color.orange)
gauche()
avance()
setBrosseCouleur(Color.magenta)
setBrosseCouleur(Color.magenta)
avance()
setBrosseCouleur(Color.orange)
setBrosseCouleur(Color.orange)
recule()
gauche()
avance()
setBrosseCouleur(Color.magenta)
setBrosseCouleur(Color.magenta)
droite()
avance()
avance()
avance()
droite()
avance()
avance()
avance()
avance()
gauche()
gauche()
gauche()
avance()
avance()
gauche()
gauche()
gauche()
avance()
avance()
avance()
avance()
gauche()
gauche()
droite()
droite()
droite()
droite()
avance()
avance()
avance()
avance()
gauche()
gauche()
gauche()
avance()
avance()
avance()
droite()
gauche()
gauche()
avance()
setBrosseCouleur(Color.white)
setBrosseCouleur(Color.white)
gauche()
avance()
avance()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
avance()
avance()
droite()
droite()
droite()
avance()
avance()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()
avance()
droite()
droite()
avance()
avance()
gauche()
gauche()
gauche()
avance()
setBrosseCouleur(Color.magenta)
setBrosseCouleur(Color.magenta)

}
